--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "env-cmd -f ./dev.env nodemon index.js"
+    "dev": "env-cmd -f ./.env nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +15,11 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "node-cache": "^5.1.2",
     "node-telegram-bot-api": "^0.66.0",
+    "string-similarity": "^4.0.4",
     "uuid": "^10.0.0"
   }
 }
