--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.14.1",
     "axios": "^1.7.2",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
