--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongodb": "^6.7.0",
     "node-cache": "^5.1.2",
     "node-telegram-bot-api": "^0.66.0",
+    "sqlite3": "^5.1.7",
     "string-similarity": "^4.0.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5"
   }
 }
