--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "env-cmd -f ./.env nodemon index.js"
+    "dev": "env-cmd -f ./.env node index.js"
   },
   "keywords": [],
   "author": "",
